--- a/shopcar/package.json
+++ b/shopcar/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
@@ -35,7 +36,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "vue/comment-directive": "off"
+    }
   },
   "browserslist": [
     "> 1%",
